--- a/home.html
+++ b/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -6,13 +7,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 	<title>Web Developer</title>
 </head>
+
 <body>
+	
 	<header>
 		
 		<span id="logo"><img src="img/logo.png" alt="logo"></span>
 		<span id="htext""><h2>Primoz Babsek - Future Full Stack Developer</h2></span>
 
 	</header>
+	
 	<nav>
 		<ul>
 			<li><a class="navlinks" href="#">Home</a></li>
@@ -24,42 +28,37 @@
 	</nav>
 	
 	<div>
-		<a href="#"><figure class="figure figure1">
-			<img class="images" src="img/image1.jpeg" alt="Togetherwecan">
-			<figcaption>Meet our small but awesome team</figcaption>
+		<a href="#">
+			<figure class="figure figure1">
+				<img class="images" src="img/image1.jpeg" alt="Togetherwecan">
+				<figcaption>Meet our small but awesome team</figcaption>
+			</figure>
+		</a>
+		
+		<a href="#">
+			<figure class="figure figure2">
+				<img class="images" src="img/image2.jpg" alt="Togetherwecan">
+				<figcaption>Podcast twice per week</figcaption>
+			</figure>
+		</a>
 
-		</figure></a>
-		<a href="#"><figure class="figure figure2">
-			<img class="images" src="img/image2.jpg" alt="Togetherwecan">
-			<figcaption>Podcast twice per week</figcaption>
+		<a href="#">
+			<figure class="figure figure3">
+				<img class="images" src="img/image3.jpg" alt="Togetherwecan">
+				<figcaption>Are you a coder? Perfect place for you!</figcaption>
+			</figure>
+		</a>
 
-		</figure></a>
-		<a href="#"><figure class="figure figure3">
-			<img class="images" src="img/image3.jpg" alt="Togetherwecan">
-			<figcaption>Are you a coder? Perfect place for you!</figcaption>
-
-		</figure></a>
-		<a href="#"><figure class="figure figure4">
-			<img class="images" src="img/image4.jpg" alt="Togetherwecan">
-			<figcaption>First steps to coding</figcaption>
-
-		</figure></a>
-		<!-- <figure>
-			<img class="images" src="img/image2.jpeg" alt="img2">
-			<figcaption>img2</figcaption>
-
-		</figure>
-		<figure>
-			<img class="images" src="img/image3.jpeg" alt="img3">
-			<figcaption>img3</figcaption>
-
-		</figure>
-		<figure>
-			<img class="images" src="img/image4.jpeg" alt="img4">
-			<figcaption>img4</figcaption>
-
-		</figure> -->
+		<a href="#">
+			<figure class="figure figure4">
+				<img class="images" src="img/image4.jpg" alt="Togetherwecan">
+				<figcaption>First steps to coding</figcaption>
+			</figure>
+		</a>
+		
 	</div>
+	
+
 	<footer>
 		<p>Primoz babsek - Code Factory</p>
 	</footer>
