links dont change color

--- a/home.html
+++ b/home.html
@@ -30,28 +30,28 @@
 	<div>
 		<a href="#">
 			<figure class="figure figure1">
-				<img class="images" src="img/image1.jpeg" alt="Togetherwecan">
+				<img class="images" src="img/image1.jpeg" alt="Our team">
 				<figcaption>Meet our small but awesome team</figcaption>
 			</figure>
 		</a>
 		
 		<a href="#">
 			<figure class="figure figure2">
-				<img class="images" src="img/image2.jpg" alt="Togetherwecan">
+				<img class="images" src="img/image2.jpg" alt="Podcast">
 				<figcaption>Podcast twice per week</figcaption>
 			</figure>
 		</a>
 
 		<a href="#">
 			<figure class="figure figure3">
-				<img class="images" src="img/image3.jpg" alt="Togetherwecan">
+				<img class="images" src="img/image3.jpg" alt="Coders dream">
 				<figcaption>Are you a coder? Perfect place for you!</figcaption>
 			</figure>
 		</a>
 
 		<a href="#">
 			<figure class="figure figure4">
-				<img class="images" src="img/image4.jpg" alt="Togetherwecan">
+				<img class="images" src="img/image4.jpg" alt="kids">
 				<figcaption>First steps to coding</figcaption>
 			</figure>
 		</a>
@@ -60,7 +60,7 @@
 	
 
 	<footer>
-		<p>Primoz babsek - Code Factory</p>
+		<p>Primoz Babsek - Code Factory</p>
 	</footer>
 
 </body>
